# 2021-khcup-chess

./: Cargo.toml  README.md
chess-interactor/: answer.txt
chess-interactor/src/: lib.rs
problem-I/: Problem.xml  interactor
problem-I/files/: problem_ru.tex  problem_ua.tex
problem-I/tests/: 01.out  02.out  03.out  04.out  05.out  06.out  07.out  08.out  09.out  10.out  11.out
problem-II/: interactor
problem-II/files/: problem_ru.tex  problem_ua.tex
problem-II/tests/: 01.out  02.out  03.out  04.out  05.out  06.out  07.out  08.out  09.out  10.out  11.out
src/: lib.rs  main.rs
