[package]
name = "chess-interactor"
version = "0.1.0"
authors = ["Vlad Frolov <frolvlad@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1.13"
tracing-subscriber = "0.2.5"
derive_more = "0.99.5"

[dev-dependencies]
insta = "1"

[features]
king-moves-enabled = []
